# firebase-auth-lite-rs

./: Cargo.toml  LICENSE  README.md  main.js
.github/workflows/: ci.yml
examples/: README.md
examples/yew-email-password-example/: Cargo.toml  index.html
examples/yew-email-password-example/src/: home.rs  lib.rs  login.rs  signup.rs
firebase-auth-lite/: Cargo.toml
firebase-auth-lite/src/: lib.rs
firebase-auth-lite/tests/: test_auth.rs
src/: lib.rs
tests/: test_auth.rs
