[package]
name = "yew-email-password-example"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-auth-lite = { path = "../../firebase-auth-lite" }
js-sys = "0.3"
yew = "0.19"
yew-router = "0.16"
